--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
           <p>Don't use illegally.</p>
           <button class="btn-click" onclick="window.open('https://t.me/ui_TooLS_Tetris_bot', '_blank')">Open</button>
         </div>
+      <div class="card">
+          <img src="tool19.png" alt="tool 6" />
+          <h3>PS MOBILE</h3>
+          <p>Don't use illegally.</p>
+          <button class="btn-click" onclick="window.open('https://t.me/ui_TooLS_Tetris_bot', '_blank')">Open</button>
+        </div>
       </div>
     </section>
   
