--- a/index.html
+++ b/index.html
@@ -158,3 +158,7 @@
       </footer>
 </body>
 </html>
+<script type='text/javascript' src='//pl26066448.profitableratecpm.com/74/11/81/7411815f2c30f1b83b4d8ef648d9576d.js'></script>
+
+<script type='text/javascript' src='//pl26066448.profitableratecpm.com/74/11/81/7411815f2c30f1b83b4d8ef648d9576d.js'></script>
+<script type='text/javascript' src='//pl26066448.profitableratecpm.com/74/11/81/7411815f2c30f1b83b4d8ef648d9576d.js'></script>
