--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
  <section class="main">
     <h1>HELLO GENTLEMEN</h1>
     <p>ALL TOOLS AVAILABLE BELOW</p>
-
+<script type="text/javascript">
+ atOptions = {
+  'key' : '198d51915d8cc397f7611f10e2d1e563',
+  'format' : 'iframe',
+  'height' : 90,
+  'width' : 728,
+  'params' : {}
+ };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/198d51915d8cc397f7611f10e2d1e563/invoke.js"></script>
     <div class="card-container">
         <div class="card">
           <img src="tool1.png" alt="tool 1" />
@@ -151,7 +160,16 @@
         </div>
       </div>
     </section>
-  
+  <script type="text/javascript">
+ atOptions = {
+  'key' : '198d51915d8cc397f7611f10e2d1e563',
+  'format' : 'iframe',
+  'height' : 90,
+  'width' : 728,
+  'params' : {}
+ };
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/198d51915d8cc397f7611f10e2d1e563/invoke.js"></script>
 
     <footer style="text-align:center; padding: 20px; margin-top: 40px; color: rgb(255, 255, 255); background: #111; border-top: 1px solid #333;">
         <strong>Disclaimer:</strong> This website is for educational and research purposes only. We do not promote illegal activities. Use tools responsibly and legally. Misuse may lead to legal consequences.
